--- a/datasets/transactions_unknown.json
+++ b/datasets/transactions_unknown.json
@@ -59,11 +59,11 @@
     "dimensions": []
   },
   "versionTag": {
-    "versionNumber": 1,
+    "versionNumber": 2,
     "lastModifiedBy": {
       "login": "admin"
     },
-    "lastModifiedOn": 1593137244386
+    "lastModifiedOn": 1593826943543
   },
   "creationTag": {
     "versionNumber": 0,
@@ -221,6 +221,30 @@
       {
         "name": "card_state_enName",
         "type": "string"
+      },
+      {
+        "name": "card_purchase_amount_min",
+        "type": "double"
+      },
+      {
+        "name": "card_purchase_amount_max",
+        "type": "double"
+      },
+      {
+        "name": "card_purchase_amount_avg",
+        "type": "double"
+      },
+      {
+        "name": "merchant_purchase_amount_min",
+        "type": "double"
+      },
+      {
+        "name": "merchant_purchase_amount_max",
+        "type": "double"
+      },
+      {
+        "name": "merchant_purchase_amount_avg",
+        "type": "double"
       }
     ],
     "userModified": true
